--- a/assets/translations/km.json
+++ b/assets/translations/km.json
@@ -1,4 +1,14 @@
 {
   "bottom_sheet.change_language": "ប្ដូរភាសា",
-  "enum.language": "ភាសា"
+  "enum.language": "ភាសា",
+  "search_hint": "ស្វែងរកគំនិត",
+  "ideas_for_you": "គំនិតសម្រាប់អ្នក",
+  "popular_on_pinterest": "ល្បីនៅលើ Pinterest",
+  "follow": "តាមដាន",
+  "view": "មើល",
+  "save": "រក្សាទុក",
+  "image_saved_message": "រូបភាពត្រូវបានរក្សាទុកនៅក្នុងព្រូហ្វាយរបស់អ្នក",
+  "more_like_this": "បន្ថែមដូចនេះ",
+  "message": "សារ",
+  "contacts": "ទំនាក់ទំនង"
 }
