--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,4 +1,39 @@
 {
   "bottom_sheet.change_language": "Change Language",
-  "enum.language": "Language"
+  "enum.language": "Language",
+  "button.apply": "Apply",
+  "your_account": "Your account",
+  "settings": "Settings",
+  "account_management": "Account Management",
+  "language": "Language",
+  "appearance" : "Appearance",
+  "profile_visibility": "Profile visibility",
+  "home_feed_tuner": "Home feed turner",
+  "claimed_accounts": "Claimed accounts",
+  "notifications": "Notifications",
+  "privacy_and_data": "Privacy and Data",
+  "login": "Login",
+  "add_account": "Add account",
+  "security": "Security",
+  "log_in": "Log in",
+  "support": "Support",
+  "help_center": "Help Center",
+  "developers": "Developers",
+  "terms_of_service": "Terms of service",
+  "privacy_policy": "Privacy policy",
+  "view_profile": "View profile",
+  "meet_the_developer": "Meet the Developer",
+  "search_hint": "Search for ideas",
+  "ideas_for_you": "Ideas for you",
+  "popular_on_pinterest": "Popular on Pinterest",
+  "follow": "Follow",
+  "view": "View",
+  "save": "Save",
+  "image_saved_message": "Image saved to your profile",
+  "more_like_this": "More like this",
+  "message": "Message",
+  "contacts": "Contacts",
+  "what_you_might_see": "What you might see",
+  "share_ideas_with_friends": "Share ideas with your friends",
+  "search_by_name_or_email_address": "Search by name or email address"
 }
