--- a/assets/translations/km.json
+++ b/assets/translations/km.json
@@ -1,4 +1,39 @@
 {
   "bottom_sheet.change_language": "ប្ដូរភាសា",
-  "enum.language": "ភាសា"
+  "enum.language": "ភាសា",
+  "button.apply": "ដាក់",
+  "your_account": "គណនីរបស់អ្នក",
+  "settings": "ការកំណត់",
+  "account_management": "ការគ្រប់គ្រងគណនី",
+  "language": "ភាសា",
+  "appearance" : "រូបរាង",
+  "profile_visibility": "ទស្សនភាពទម្រង់",
+  "home_feed_tuner": "ផ្ទាល់មុខផ្ទះ",
+  "claimed_accounts": "គណនីដែលបានបណ្តាញ",
+  "notifications": "ការជូនដំណឹង",
+  "privacy_and_data": "ភាពឯកជននិងទិន្នន័យ",
+  "login": "ចូល",
+  "add_account": "បន្ថែមគណនី",
+  "security": "សន្តិសុខ",
+  "log_in": "ចូល",
+  "support": "គាំទ្រ",
+  "help_center": "មជ្ឈមណ្ឌលជំនួយ",
+  "developers": "អ្នកអភិវឌ្ឍន៍",
+  "terms_of_service": "លក្ខខណ្ឌសេវាកម្ម",
+  "privacy_policy": "គោលនយោបាយឯកជនភាព",
+  "view_profile": "មើលទម្រង់",
+  "meet_the_developer": "ជួបអ្នកអភិវឌ្ឍន៍",
+  "search_hint": "ស្វែងរកគំនិត",
+  "ideas_for_you": "គំនិតសម្រាប់អ្នក",
+  "popular_on_pinterest": "ល្បីនៅលើ Pinterest",
+  "follow": "តាមដាន",
+  "view": "មើល",
+  "save": "រក្សាទុក",
+  "image_saved_message": "រូបភាពត្រូវបានរក្សាទុកនៅក្នុងព្រូហ្វាយរបស់អ្នក",
+  "more_like_this": "បន្ថែមដូចនេះ",
+  "message": "សារ",
+  "contacts": "ទំនាក់ទំនង",
+  "what_you_might_see": "អ្វីដែលអ្នកអាចឃើញ",
+  "share_ideas_with_friends" : "ចែករំលែកគំនិតឱ្យមិត្តភក្តិរបស់អ្នក",
+  "search_by_name_or_email_address": "ស្វែងរកតាមឈ្មោះ ឬអាសយដ្ឋានអ៊ីមែល"
 }
